Could not make Delete work, click is not detected, with correct and specific class name

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -31,20 +31,20 @@
                 <span>123 456 789</span>
                 <span class="action-icons">
                     <a class="edit-admin" data-type="admin" data-admin-id="1">
-                        <img src="assets/img/edit.svg"" alt="" srcset="">
+                        <img src="assets/img/edit.svg" alt="" srcset="">
                     </a>
-                    <a class="delete-data delete-admin" data-type="admin" data-admin-id="1">
-                        <img src="assets/img/remove.svg"" alt="" srcset="">
+                    <a class="delete-data" data-type="admin" data-admin-id="1">
+                        <img src="assets/img/remove.svg" alt="" srcset="">
                     </a>
                 </span>
                 <span>Catarina Lourenço</span>
                 <span>987 654 321</span>
                 <span class="action-icons">
                         <a class="edit-admin" data-type="admin" data-admin-id="2">
-                            <img src="assets/img/edit.svg"" alt="" srcset="">
+                            <img src="assets/img/edit.svg" alt="" srcset="">
                         </a>
-                        <a class="delete-data delete-admin" data-type="admin" data-admin-id="2">
-                            <img src="assets/img/remove.svg"" alt="" srcset="">
+                        <a class="delete-data" data-type="admin" data-admin-id="2">
+                            <img src="assets/img/remove.svg" alt="" srcset="">
                         </a>
                     </span>
             </div>
@@ -100,10 +100,10 @@
                         <span><a href=" https://www.google.com/maps/dir/?api=1&destination=37.352141,-8.843425" target="_blank">Ver</a></span>
                         <span class="action-icons">
                             <a class="edit-place" data-type="place" data-place-id="1">
-                                <img src="assets/img/edit.svg"" alt="" srcset="">
+                                <img src="assets/img/edit.svg" alt="" srcset="">
                             </a>
-                            <a class="delete-data delete-place" data-type="place" data-place-id="1">
-                                <img src="assets/img/remove.svg"" alt="" srcset="">
+                            <a class="delete-data" data-type="place" data-place-id="1">
+                                <img src="assets/img/remove.svg" alt="" srcset="">
                             </a>
                         </span>
                         <!-- <span>2</span> -->
@@ -113,10 +113,10 @@
                         <span><a href="https://www.google.com/maps/dir/?api=1&destination=37.015578,-7.920545" target="_blank">Ver</a></span>
                         <span class="action-icons">
                             <a class="edit-place" data-type="place" data-place-id="2">
-                                <img src="assets/img/edit.svg"" alt="" srcset="">
+                                <img src="assets/img/edit.svg" alt="" srcset="">
                             </a>
-                            <a class="delete-data delete-place" data-type="place" data-place-id="1">
-                                <img src="assets/img/remove.svg"" alt="" srcset="">
+                            <a class="delete-data" data-type="place" data-place-id="1">
+                                <img src="assets/img/remove.svg" alt="" srcset="">
                             </a>
                         </span>
                     </div>
@@ -147,28 +147,28 @@
                             <span>Morango</span>
                             <span class="action-icons">
                                 <a class="edit-flavour" data-type="flavour" data-flavour-id="1">
-                                    <img src="assets/img/edit.svg"" alt="" srcset="">
+                                    <img src="assets/img/edit.svg" alt="" srcset="">
                                 </a>
-                                <a class="delete-data delete-flavour" data-type="flavour" data-flavour-id="1">
-                                    <img src="assets/img/remove.svg"" alt="" srcset="">
+                                <a class="delete-data" data-type="flavour" data-flavour-id="1">
+                                    <img src="assets/img/remove.svg" alt="" srcset="">
                                 </a>
                             </span>
                             <span>Chocolate</span>
                             <span class="action-icons">
                                 <a class="edit-flavour" data-type="flavour" data-flavour-id="2">
-                                    <img src="assets/img/edit.svg"" alt="" srcset="">
+                                    <img src="assets/img/edit.svg" alt="" srcset="">
                                 </a>
-                                <a class="delete-data delete-flavour" data-type="flavour" data-flavour-id="2">
-                                    <img src="assets/img/remove.svg"" alt="" srcset="">
+                                <a class="delete-data" data-type="flavour" data-flavour-id="2">
+                                    <img src="assets/img/remove.svg" alt="" srcset="">
                                 </a>
                             </span>
                             <span>Nutella</span>
                             <span class="action-icons">
                                 <a class="edit-flavour" data-type="flavour" data-flavour-id="3">
-                                    <img src="assets/img/edit.svg"" alt="" srcset="">
+                                    <img src="assets/img/edit.svg" alt="" srcset="">
                                 </a>
-                                <a class="delete-data delete-flavour" data-type="flavour" data-flavour-id="3">
-                                    <img src="assets/img/remove.svg"" alt="" srcset="">
+                                <a class="delete-data" data-type="flavour" data-flavour-id="3">
+                                    <img src="assets/img/remove.svg" alt="" srcset="">
                                 </a>
                             </span>
                     </div>                
@@ -193,19 +193,19 @@
                         <span>Crepes</span>
                         <span class="action-icons">
                             <a class="edit-product" data-type="product" data-product-id="1">
-                                <img src="assets/img/edit.svg"" alt="" srcset="">
+                                <img src="assets/img/edit.svg" alt="" srcset="">
                             </a>
-                            <a class="delete-data delete-product" data-type="product" data-product-id="1">
-                                <img src="assets/img/remove.svg"" alt="" srcset="">
+                            <a class="delete-data" data-type="product" data-product-id="1">
+                                <img src="assets/img/remove.svg" alt="" srcset="">
                             </a>
                         </span>
                         <span>Waffles</span>
                         <span class="action-icons">
                             <a class="edit-product" data-type="product" data-product-id="2">
-                                <img src="assets/img/edit.svg"" alt="" srcset="">
+                                <img src="assets/img/edit.svg" alt="" srcset="">
                             </a>
-                            <a class="delete-data delete-product" data-type="product" data-product-id="2">
-                                <img src="assets/img/remove.svg"" alt="" srcset="">
+                            <a class="test-data" data-type="product" data-product-id="2">
+                                <img src="assets/img/remove.svg" alt="" srcset="">
                             </a>
                         </span>
                     </div>             
