issue persist when clicking on icon, but not on the empty space besides it. Edit works either way, clicking on icon or empty space, but not Delete for some reason.

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -204,7 +204,7 @@
                             <a class="edit-product" data-type="product" data-product-id="2">
                                 <img src="assets/img/edit.svg" alt="" srcset="">
                             </a>
-                            <a class="test-data" data-type="product" data-product-id="2">
+                            <a class="delete-data" data-type="product" data-product-id="2">
                                 <img src="assets/img/remove.svg" alt="" srcset="">
                             </a>
                         </span>
