Added text, added padding to the static content

--- a/src/index.html
+++ b/src/index.html
@@ -73,20 +73,10 @@
         <section class="section static card-background-light" id="concept">
             <h1>Conceito</h1>
             <div>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
-                </p>
-                <div class="show-more">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
-                    </p>
-                </div>
+                <p>Somos uma creperia ambulante conhecida pelos deliciosos waffles no palito e crepes tradicionais. Sempre na estrada, de um lado para o outro, a conhecida carrinha cor-de-rosa situa-se no Algarve na época de Verão e em Lisboa no Inverno.</p>
+                <p>Os nossos waffles caracterizam-se pela sua massa leve e húmida por dentro e estaladiça por fora. São recheados e a escolha do sabor fica ao critério do cliente. Além disso vêm agarrados a um palito para ser fácil de comer em andamento sem se sujar. </p>
+                <p>Crepes tradicionais há muitos, mas os nossos são especiais. Com muito trabalho e estudo descobrimos a nossa receita secreta, uma massa equilibrada com ingredientes na proporção correta. Caracteriza-se por ser suave, fininha e tenra. São servidos enrolados com o recheio no interior tornando-se prático de comer.</p>
+                <p>Temos ainda mini panquecas e churritos sem fritura. E para acompanhar estas especialidades temos as nossas bebidas, como o chocolate quente, chás diversos, cappuccino, latte macchiato, limonada ou morangada e claro, uma ginginha de Óbidos para completar este apetitoso menu. </p>
             </div>
         </section>
         <section class="section parallax bg2">
@@ -206,12 +196,11 @@
         <section class="section static card-background-light" id="story">
             <h1>História</h1>
             <div>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
-                </p>
+                <p>Catarina Lourenço e David Simões, licenciados em Produção Alimentar em Restauração na Escola Superior de Hotelaria e Turismo do Estoril.</p>
+                <p>Trabalhámos em várias cozinhas de hotéis e restaurantes. Destacam-se o Bon Bon em Carvoeiro com uma estrela Michelin, o 100 Maneiras em Lisboa do Chef Ljubomir, o Vila Vita Parc Resort & Spa em Porches, o Hotel Cascais Miragem em Cascais, o Pestana Colombos Premium em Porto Santo, entre outros. </p>
+                <p>Surgiu o entusiasmo de iniciar um projeto nosso. Ficámos fascinados quando aprendemos a fazer bombons com o Chefe Nelson Félix na cadeira de Pastelaria. Decidimos então criar uma marca de bombons. Surgiu o Bom² (bombom), duas pessoas que se juntaram para fazer algo bom, tão bom que é duas vezes bom! Testámos combinações e criámos recheios incríveis escondidos na fina, estaladiça e brilhante capa de chocolate. Rapidamente começámos a ganhar clientes, eram muitas as encomendas que surgiam para uma pequena capacidade de produção, artesanal e bastante elementar. Algumas complicações apareceram com a incapacidade de investir em máquinas, espaço de produção climatizado e empregados.</p>
+                <p>Aproximava-se o Verão, tempo muito quente para trabalhar o chocolate. Numa conversa de amigos falou-se na hipótese de comprarmos uma carrinha de Street Food. Abandonámos temporariamente os bombons. Começaram a surgir novas ideias. Comprámos a carrinha e em seguida decorámos e arranjámos ao nosso gosto com a ajuda da empresa Porquê Design.</p>
+                <p>Decidimos criar algo diferente e inovador, surgiram os originais waffles recheados no palito. Manteve-se o nome, mas alterou-se o conceito. A necessidade de um alimento que fosse prático para comer em andamento levou-nos à criação do waffle preso no palito. Estreámos este conceito de Street Food no Verão de 2017 na Zona Ribeirinha de Portimão. Rapidamente começámos a ganhar elogios pela qualidade das nossas massas, acabando por surgir o nosso slogan “quem prova quer mais”.</p>
             </div>
         </section>
         <section class="section parallax bg4">
@@ -219,13 +208,14 @@
         </section>
         <!-- #bomaoquadrado -->
         <section class="section static card-background-dark" id="hashtag">
-                <h1 style="margin-bottom: 0">#bom2</h1>
-                <h5 style="margin-top: 0">#bomaoquadrado</h5>
+                <h1>#hashtag</h1>
+                <!-- <h5 style="margin-top: 0; padding: 0em 1.5em;">#bomaoquadrado</h5> -->
                 <div>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
-                    </p>
-                    <!-- <div id="instafeed"></div> -->
+                    <p>Sempre que nos visitares pública uma foto dos nossos crepes/waffles no teu Instagram. identifica-nos @bomaoquadrado e usa os hashtags #bomaoquadrado e #quemprovaquermais</p>
+                    <p>Se fizermos repost da tua foto ganhas um waffle/crepe à tua escolha.</p>
+                    <p>Agora já sabes como ganhar doces à pala</p> 
+
+                    <div id="instafeed"></div>
                 </div>
         </section>
         <section class="section parallax bg4">
