added some comments and corrected some code

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -74,7 +74,7 @@
                     <button class="show-settings btn-auto btn-primary">
                         <img src="assets/img/settings.svg" alt="" srcset="">
                     </button>
-                    <a href="./login.html" class="btn-auto btn-primary">
+                    <a href="./logout.html" class="btn-auto btn-primary">
                         <img src="assets/img/logout.svg" alt="" srcset="">
                     </a>
                 </div>
