--- a/src/index.html
+++ b/src/index.html
@@ -197,9 +197,13 @@
             <h1>História</h1>
             <div>
                 <p>Catarina Lourenço e David Simões, licenciados em Produção Alimentar em Restauração na Escola Superior de Hotelaria e Turismo do Estoril.</p>
+                <div class="divider"></div>
                 <p>Trabalhámos em várias cozinhas de hotéis e restaurantes. Destacam-se o Bon Bon em Carvoeiro com uma estrela Michelin, o 100 Maneiras em Lisboa do Chef Ljubomir, o Vila Vita Parc Resort & Spa em Porches, o Hotel Cascais Miragem em Cascais, o Pestana Colombos Premium em Porto Santo, entre outros. </p>
+                <div class="divider"></div>
                 <p>Surgiu o entusiasmo de iniciar um projeto nosso. Ficámos fascinados quando aprendemos a fazer bombons com o Chefe Nelson Félix na cadeira de Pastelaria. Decidimos então criar uma marca de bombons. Surgiu o Bom² (bombom), duas pessoas que se juntaram para fazer algo bom, tão bom que é duas vezes bom! Testámos combinações e criámos recheios incríveis escondidos na fina, estaladiça e brilhante capa de chocolate. Rapidamente começámos a ganhar clientes, eram muitas as encomendas que surgiam para uma pequena capacidade de produção, artesanal e bastante elementar. Algumas complicações apareceram com a incapacidade de investir em máquinas, espaço de produção climatizado e empregados.</p>
+                <div class="divider"></div>
                 <p>Aproximava-se o Verão, tempo muito quente para trabalhar o chocolate. Numa conversa de amigos falou-se na hipótese de comprarmos uma carrinha de Street Food. Abandonámos temporariamente os bombons. Começaram a surgir novas ideias. Comprámos a carrinha e em seguida decorámos e arranjámos ao nosso gosto com a ajuda da empresa Porquê Design.</p>
+                <div class="divider"></div>
                 <p>Decidimos criar algo diferente e inovador, surgiram os originais waffles recheados no palito. Manteve-se o nome, mas alterou-se o conceito. A necessidade de um alimento que fosse prático para comer em andamento levou-nos à criação do waffle preso no palito. Estreámos este conceito de Street Food no Verão de 2017 na Zona Ribeirinha de Portimão. Rapidamente começámos a ganhar elogios pela qualidade das nossas massas, acabando por surgir o nosso slogan “quem prova quer mais”.</p>
             </div>
         </section>
@@ -209,11 +213,10 @@
         <!-- #bomaoquadrado -->
         <section class="section static card-background-dark" id="hashtag">
                 <h1>#hashtag</h1>
-                <!-- <h5 style="margin-top: 0; padding: 0em 1.5em;">#bomaoquadrado</h5> -->
                 <div>
-                    <p>Sempre que nos visitares pública uma foto dos nossos crepes/waffles no teu Instagram. identifica-nos @bomaoquadrado e usa os hashtags #bomaoquadrado e #quemprovaquermais</p>
+                    <p>Sempre que nos visitares pública uma foto dos nossos crepes/waffles no teu Instagram. identifica-nos @bomaoquadrado e usa os hashtags #bomaoquadrado e #quemprovaquermais.</p>
                     <p>Se fizermos repost da tua foto ganhas um waffle/crepe à tua escolha.</p>
-                    <p>Agora já sabes como ganhar doces à pala</p> 
+                    <p>Agora já sabes como ganhar doces à pala!</p> 
 
                     <div id="instafeed"></div>
                 </div>
@@ -225,11 +228,21 @@
             <h1>Eventos</h1>
             <div>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
+                    Vai haver festa? O BOM² pode torná-la deliciosa! Fazemos todo o tipo de eventos.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit voluptatibus aliquam, laudantium sint officiis, consequatur maxime quidem itaque voluptate ut asperiores cum possimus, dolorum voluptas recusandae tenetur at. Eligendi, quisquam!
-                </p>
+                    Pede já a tua proposta:
+                    <ol>
+                        <li>Nome</li>
+                        <li>Email</li>
+                        <li>Telemóvel</li>
+                        <li>Localização</li>
+                        <li>Tipo de evento</li>
+                        <li>Duração do evento</li>
+                        <li>Data do evento</li>
+                        <li>Estimativa do nº de pessoas</li>
+                    </ol>
+                </p>                        
             </div>
         </section>
         <section class="section parallax bg4">
@@ -247,7 +260,7 @@
                     </p>
                 </div>
                 <div class="contact-form-wrapper">
-                    <div id="error-message" class="hide" style="color: rgb(255, 40, 80);">Todos os campos tem que ser preenchidos, motivo escolhido e aceite os termos.</div>
+                    <div id="error-message" class="hide" style="color: rgb(178, 34, 34);">Todos os campos tem que ser preenchidos, motivo escolhido e aceite os termos.</div>
                     <form id="contact-form" class="contact-form">                   
                         <!-- <label for="form-name">Nome</label> -->
                         <input name="form-name" type="text" class="form-input" placeholder="Nome">
