added phone numbers

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,8 @@
         </div>
         <div class="nav-contact-info">
             <!-- <div> -->
-                <a href="tel:+35192X XXX XXX" target="_top">92X XXX XXX</a>
+                <a href="tel:+351965838259" target="_top">+351 965 838 259</a>
+                <a href="tel:+351968167446" target="_top">+351 968 167 446</a>
             <!-- </div>
             <div> -->
                 <a href="mailto:geral@bomaoquadrado.pt" target="_top">geral@bomaoquadrado.pt</a>
@@ -296,7 +297,7 @@
             </div>
             <div class="contact-information">
                 <div>
-                    <a href="tel:+35192X XXX XXX" target="_top">92X XXX XXX</a>
+                    <a href="tel:+351965838259 " target="_top">+351 965 838 259</a> / <a href="tel:+351968167446 " target="_top">+351 968 167 446</a>
                 </div>
                 <div>
                     <a href="mailto:geral@bomaoquadrado.pt" target="_top">geral@bomaoquadrado.pt</a>
