Added confirmatiom that message is sent, spinner though needs to be beter stylized

--- a/src/index.html
+++ b/src/index.html
@@ -281,8 +281,11 @@
                                     <label for="terms">Li e aceito os termos</label>
                                     <input type="checkbox" name="terms" class="form-input" style="vertical-align: middle; margin: 0 !important">
                                 </span>
-                            <div id="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
-                            <button type="submit"  class="hide" id="send-btn" class="btn btn-send">Enviar</button>
+                            <div id="lds-ellipsis" class="hide"><div></div><div></div><div></div><div></div></div>
+                            <div id="message-sent-confirmation" class="hide">
+                                Mensagem enviada &#10003;
+                            </div>
+                            <button type="submit" id="send-btn" class="btn btn-send">Enviar</button>
                         </div>
                     </form>
                 </div>
