Front-end complete

--- a/src/index.html
+++ b/src/index.html
@@ -261,7 +261,7 @@
                     </p>
                 </div>
                 <div class="contact-form-wrapper">
-                        <div id="error-message" class="hide" style="color: rgb(178, 34, 34);">Todos os campos tem que ser preenchidos, motivo escolhido e aceite os termos.</div>
+                        <div id="error-message" class="hide" style="color: rgb(178, 34, 34);">Todos os campos tem que ser preenchidos e aceite os termos.</div>
                         <form id="contact-form" class="contact-form">                   
                             <!-- <label for="form-name">Nome</label> -->
                             <input name="form-name" type="text" class="form-input" placeholder="Nome">
