updated the message status and message

--- a/src/index.html
+++ b/src/index.html
@@ -282,9 +282,7 @@
                                     <input type="checkbox" name="terms" class="form-input" style="vertical-align: middle; margin: 0 !important">
                                 </span>
                             <div id="lds-ellipsis" class="hide"><div></div><div></div><div></div><div></div></div>
-                            <div id="message-sent-confirmation" class="hide">
-                                Mensagem enviada &#10003;
-                            </div>
+                            <div id="message-status" class="hide"></div>
                             <button type="submit" id="send-btn" class="btn btn-send">Enviar</button>
                         </div>
                     </form>
