--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -30,7 +30,7 @@
                 <span>David Simoes</span>
                 <span>123 456 789</span>
                 <span class="action-icons">
-                    <a class="edit-admin" data-type="admin" data-admin-id="1">
+                    <a class="show-edit-form" data-type="admin" data-admin-id="1">
                         <img src="assets/img/edit.svg" alt="" srcset="">
                     </a>
                     <a class="delete-data" data-type="admin" data-admin-id="1">
@@ -40,7 +40,7 @@
                 <span>Catarina Lourenço</span>
                 <span>987 654 321</span>
                 <span class="action-icons">
-                        <a class="edit-admin" data-type="admin" data-admin-id="2">
+                        <a class="show-edit-form" data-type="admin" data-admin-id="2">
                             <img src="assets/img/edit.svg" alt="" srcset="">
                         </a>
                         <a class="delete-data" data-type="admin" data-admin-id="2">
@@ -99,7 +99,7 @@
                         <span>2018-12-31</span>
                         <span><a href=" https://www.google.com/maps/dir/?api=1&destination=37.352141,-8.843425" target="_blank">Ver</a></span>
                         <span class="action-icons">
-                            <a class="edit-place" data-type="place" data-place-id="1">
+                            <a class="show-edit-form" data-type="place" data-place-id="1">
                                 <img src="assets/img/edit.svg" alt="" srcset="">
                             </a>
                             <a class="delete-data" data-type="place" data-place-id="1">
@@ -112,7 +112,7 @@
                         <span>2018-12-31</span>
                         <span><a href="https://www.google.com/maps/dir/?api=1&destination=37.015578,-7.920545" target="_blank">Ver</a></span>
                         <span class="action-icons">
-                            <a class="edit-place" data-type="place" data-place-id="2">
+                            <a class="show-edit-form" data-type="place" data-place-id="2">
                                 <img src="assets/img/edit.svg" alt="" srcset="">
                             </a>
                             <a class="delete-data" data-type="place" data-place-id="2">
@@ -146,7 +146,7 @@
                             <span class="table-header">Accoes</span>
                             <span>Morango</span>
                             <span class="action-icons">
-                                <a class="edit-flavour" data-type="flavour" data-flavour-id="1">
+                                <a class="show-edit-form" data-type="flavour" data-flavour-id="1">
                                     <img src="assets/img/edit.svg" alt="" srcset="">
                                 </a>
                                 <a class="delete-data" data-type="flavour" data-flavour-id="1">
@@ -155,7 +155,7 @@
                             </span>
                             <span>Chocolate</span>
                             <span class="action-icons">
-                                <a class="edit-flavour" data-type="flavour" data-flavour-id="2">
+                                <a class="show-edit-form" data-type="flavour" data-flavour-id="2">
                                     <img src="assets/img/edit.svg" alt="" srcset="">
                                 </a>
                                 <a class="delete-data" data-type="flavour" data-flavour-id="2">
@@ -164,7 +164,7 @@
                             </span>
                             <span>Nutella</span>
                             <span class="action-icons">
-                                <a class="edit-flavour" data-type="flavour" data-flavour-id="3">
+                                <a class="show-edit-form" data-type="flavour" data-flavour-id="3">
                                     <img src="assets/img/edit.svg" alt="" srcset="">
                                 </a>
                                 <a class="delete-data" data-type="flavour" data-flavour-id="3">
@@ -192,7 +192,7 @@
                         <span class="table-header">Accoes</span>
                         <span>Crepes</span>
                         <span class="action-icons">
-                            <a class="edit-product" data-type="product" data-product-id="1">
+                            <a class="show-edit-form" data-type="product" data-product-id="1">
                                 <img src="assets/img/edit.svg" alt="" srcset="">
                             </a>
                             <a class="delete-data" data-type="product" data-product-id="1">
@@ -201,7 +201,7 @@
                         </span>
                         <span>Waffles</span>
                         <span class="action-icons">
-                            <a class="edit-product" data-type="product" data-product-id="2">
+                            <a class="show-edit-form"-data" data-type="product" data-product-id="2">
                                 <img src="assets/img/edit.svg" alt="" srcset="">
                             </a>
                             <a class="delete-data" data-type="product" data-product-id="2">
