All main functions for insert, edit and delete  are functionable. Some animations might be needed to let the user know what is happening during the POST fase.

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -30,20 +30,20 @@
                 <span>David Simoes</span>
                 <span>123 456 789</span>
                 <span class="action-icons">
-                    <a class="edit-form" data-type="admin" data-admin-id="1">
+                    <a class="edit-form" data-category="admin" data-admin-id="1">
                         <img src="assets/img/edit.svg" alt="" srcset="">
                     </a>
-                    <a class="delete-data" data-type="admin" data-admin-id="1">
+                    <a class="delete-data" data-category="admin" data-admin-id="1">
                         <img src="assets/img/remove.svg" alt="" srcset="">
                     </a>
                 </span>
                 <span>Catarina Lourenço</span>
                 <span>987 654 321</span>
                 <span class="action-icons">
-                        <a class="edit-form" data-type="admin" data-admin-id="2">
+                        <a class="edit-form" data-category="admin" data-admin-id="2">
                             <img src="assets/img/edit.svg" alt="" srcset="">
                         </a>
-                        <a class="delete-data" data-type="admin" data-admin-id="2">
+                        <a class="delete-data" data-category="admin" data-admin-id="2">
                             <img src="assets/img/remove.svg" alt="" srcset="">
                         </a>
                     </span>
@@ -99,10 +99,10 @@
                         <span>2018-12-31</span>
                         <span><a href=" https://www.google.com/maps/dir/?api=1&destination=37.352141,-8.843425" target="_blank">Ver</a></span>
                         <span class="action-icons">
-                            <a class="edit-form" data-type="place" data-place-id="1">
+                            <a class="edit-form" data-category="place" data-place-id="1">
                                 <img src="assets/img/edit.svg" alt="" srcset="">
                             </a>
-                            <a class="delete-data" data-type="place" data-place-id="1">
+                            <a class="delete-data" data-category="place" data-place-id="1">
                                 <img src="assets/img/remove.svg" alt="" srcset="">
                             </a>
                         </span>
@@ -112,10 +112,10 @@
                         <span>2018-12-31</span>
                         <span><a href="https://www.google.com/maps/dir/?api=1&destination=37.015578,-7.920545" target="_blank">Ver</a></span>
                         <span class="action-icons">
-                            <a class="edit-form" data-type="place" data-place-id="2">
+                            <a class="edit-form" data-category="place" data-place-id="2">
                                 <img src="assets/img/edit.svg" alt="" srcset="">
                             </a>
-                            <a class="delete-data" data-type="place" data-place-id="2">
+                            <a class="delete-data" data-category="place" data-place-id="2">
                                 <img src="assets/img/remove.svg" alt="" srcset="">
                             </a>
                         </span>
@@ -146,28 +146,28 @@
                             <span class="table-header">Accoes</span>
                             <span>Morango</span>
                             <span class="action-icons">
-                                <a class="edit-form" data-type="flavour" data-flavour-id="1">
+                                <a class="edit-form" data-category="flavour" data-flavour-id="1">
                                     <img src="assets/img/edit.svg" alt="" srcset="">
                                 </a>
-                                <a class="delete-data" data-type="flavour" data-flavour-id="1">
+                                <a class="delete-data" data-category="flavour" data-flavour-id="1">
                                     <img src="assets/img/remove.svg" alt="" srcset="">
                                 </a>
                             </span>
                             <span>Chocolate</span>
                             <span class="action-icons">
-                                <a class="edit-form" data-type="flavour" data-flavour-id="2">
+                                <a class="edit-form" data-category="flavour" data-flavour-id="2">
                                     <img src="assets/img/edit.svg" alt="" srcset="">
                                 </a>
-                                <a class="delete-data" data-type="flavour" data-flavour-id="2">
+                                <a class="delete-data" data-category="flavour" data-flavour-id="2">
                                     <img src="assets/img/remove.svg" alt="" srcset="">
                                 </a>
                             </span>
                             <span>Nutella</span>
                             <span class="action-icons">
-                                <a class="edit-form" data-type="flavour" data-flavour-id="3">
+                                <a class="edit-form" data-category="flavour" data-flavour-id="3">
                                     <img src="assets/img/edit.svg" alt="" srcset="">
                                 </a>
-                                <a class="delete-data" data-type="flavour" data-flavour-id="3">
+                                <a class="delete-data" data-category="flavour" data-flavour-id="3">
                                     <img src="assets/img/remove.svg" alt="" srcset="">
                                 </a>
                             </span>
@@ -192,19 +192,19 @@
                         <span class="table-header">Accoes</span>
                         <span>Crepes</span>
                         <span class="action-icons">
-                            <a class="edit-form" data-type="product" data-product-id="1">
+                            <a class="edit-form" data-category="product" data-product-id="1">
                                 <img src="assets/img/edit.svg" alt="" srcset="">
                             </a>
-                            <a class="delete-data" data-type="product" data-product-id="1">
+                            <a class="delete-data" data-category="product" data-product-id="1">
                                 <img src="assets/img/remove.svg" alt="" srcset="">
                             </a>
                         </span>
                         <span>Waffles</span>
                         <span class="action-icons">
-                            <a class="edit-form"-data" data-type="product" data-product-id="2">
+                            <a class="edit-form"-data" data-category="product" data-product-id="2">
                                 <img src="assets/img/edit.svg" alt="" srcset="">
                             </a>
-                            <a class="delete-data" data-type="product" data-product-id="2">
+                            <a class="delete-data" data-category="product" data-product-id="2">
                                 <img src="assets/img/remove.svg" alt="" srcset="">
                             </a>
                         </span>
